[gd_scene load_steps=5 format=3 uid="uid://t13h716inaso"]

[ext_resource type="PackedScene" uid="uid://cjos4upoylry0" path="res://radar/radar.tscn" id="1_75arv"]
[ext_resource type="Script" path="res://ui/ui.gd" id="1_wpl0o"]
[ext_resource type="Texture2D" uid="uid://chdr7bghllmsh" path="res://ui/starship_interface.png" id="2_cenmb"]
[ext_resource type="Theme" uid="uid://cbimufccfad2e" path="res://theme.tres" id="3_q76rh"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("3_q76rh")
script = ExtResource("1_wpl0o")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_cenmb")
centered = false

[node name="Radar" parent="." instance=ExtResource("1_75arv")]
unique_name_in_owner = true
position = Vector2(320, 151)

[node name="ShipInformation" type="VBoxContainer" parent="."]
offset_left = 49.0
offset_top = 76.0
offset_right = 113.0
offset_bottom = 178.0

[node name="ShipName" type="Label" parent="ShipInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Ship Name: "

[node name="Status" type="Label" parent="ShipInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Faction" type="Label" parent="ShipInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="ShipType" type="Label" parent="ShipInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Weapon" type="Label" parent="ShipInformation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="CargoManifest" type="VBoxContainer" parent="."]
offset_left = 134.0
offset_top = 77.0
offset_right = 223.0
offset_bottom = 179.0

[node name="CargoManifestTitle" type="Label" parent="CargoManifest"]
layout_mode = 2
size_flags_horizontal = 0
text = "Cargo"

[node name="CargoManifest" type="VBoxContainer" parent="CargoManifest"]
unique_name_in_owner = true
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 246.0
offset_top = 273.0
offset_right = 310.0
offset_bottom = 309.0

[node name="ApproveButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_q76rh")
text = "Approve"

[node name="RejectButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_q76rh")
text = "Reject"

[node name="SecurityBriefing" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 46.0
offset_top = 216.0
offset_right = 198.0
offset_bottom = 316.0

[node name="Title" type="Label" parent="SecurityBriefing"]
layout_mode = 2
size_flags_horizontal = 0
text = "Security Briefing"

[node name="SecurityRules" type="VBoxContainer" parent="SecurityBriefing"]
unique_name_in_owner = true
layout_mode = 2

[node name="HitPoints" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 260.0
offset_top = 256.0
offset_right = 261.0
offset_bottom = 264.0
size_flags_horizontal = 0

[node name="Credits" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 315.0
offset_top = 275.0
offset_right = 316.0
offset_bottom = 283.0
size_flags_horizontal = 0

[node name="ShipObservations" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 458.0
offset_top = 62.0
offset_right = 586.0
offset_bottom = 194.0

[node name="ShipVisualContainer" type="Container" parent="ShipObservations"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ScanContainer" type="VBoxContainer" parent="ShipObservations"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScanStatus" type="Label" parent="ShipObservations/ScanContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="ShipObservations/ScanContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_q76rh")
show_percentage = false

[node name="CargoHoldsContainer" type="VBoxContainer" parent="ShipObservations/ScanContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ObservationButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 43.0
offset_right = 521.0
offset_bottom = 79.0

[node name="ViewButton" type="Button" parent="ObservationButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "View"

[node name="ScanButton" type="Button" parent="ObservationButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Scan"

[connection signal="pressed" from="Buttons/ApproveButton" to="." method="_on_approve_button_pressed"]
[connection signal="pressed" from="Buttons/RejectButton" to="." method="_on_reject_button_pressed"]
[connection signal="pressed" from="ObservationButtons/ViewButton" to="." method="_on_observe_button_pressed"]
[connection signal="pressed" from="ObservationButtons/ScanButton" to="." method="_on_scan_button_pressed"]
